scripts/nullaway/original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8.txt
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/RoutingTableStateTesting.java:22: error: [NullAway] initializer method does not guarantee @NonNull field kads (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RoutingTableStateTesting()
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/GetParameter.java:19: error: [NullAway] assigning @Nullable expression to @NonNull field
    private String ownerId = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/GetParameter.java:20: error: [NullAway] assigning @Nullable expression to @NonNull field
    private String type = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/DHTContentImpl.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields key (line 18), data (line 19), ownerId (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DHTContentImpl()
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/simulations/DHTContentImpl.java:41: error: [NullAway] initializer method does not guarantee @NonNull field data (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DHTContentImpl(KademliaId key, String ownerId)
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/ContentMessage.java:36: error: [NullAway] initializer method does not guarantee @NonNull field content (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ContentMessage(DataInputStream in) throws IOException
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/SimpleMessage.java:26: error: [NullAway] initializer method does not guarantee @NonNull field content (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SimpleMessage(DataInputStream in)
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/ContentLookupMessage.java:34: error: [NullAway] initializer method does not guarantee @NonNull field params (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ContentLookupMessage(DataInputStream in) throws IOException
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/message/StoreContentMessage.java:36: error: [NullAway] initializer method does not guarantee @NonNull field content (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StoreContentMessage(DataInputStream in) throws IOException
           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/operation/ContentLookupOperation.java:47: error: [NullAway] assigning @Nullable expression to @NonNull field
    private JKademliaStorageEntry contentFound = null;
                                  ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/operation/StoreOperation.java:70: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                this.server.sendMessage(n, msg, null);
                                                ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/operation/ContentRefreshOperation.java:80: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    this.server.sendMessage(n, msg, null);
                                                    ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/DHT.java:29: error: [NullAway] assigning @Nullable expression to @NonNull field
    private transient KadSerializer<JKademliaStorageEntry> serializer = null;
                                                           ^
    (see http://t.uber.com/nullaway )
../original/url147ce07ebe_JoshuaKissoon_Kademlia_tgz-pJ8-kademlia_simulations_RoutingTableStateTestingJ8/src/kademlia/dht/StoredContentManager.java:170: error: [NullAway] dereferenced expression this.entries.get(entry.getKey()) is @Nullable
            this.entries.get(entry.getKey()).remove(entry);
                                            ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
